push community-level panel through pipeline

--- a/pipeline/3-get-tracts.ipynb
+++ b/pipeline/3-get-tracts.ipynb
@@ -119,7 +119,9 @@
    "outputs": [],
    "source": [
     "comm_points = gpd.read_file(COMM_AREA_TABLE).filter(['area_num_1','geometry']).drop_duplicates()\n",
-    "comm_points['centroid'] = comm_points['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()"
+    "comm_points = comm_points.rename(columns={'area_num_1': 'comm_area'})\n",
+    "comm_points['centroid'] = comm_points['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()\n",
+    "comm_points['comm_area'] = pd.to_numeric(comm_points['comm_area'],'coerce')"
    ]
   },
   {
