--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "from shapely.geometry import Point\n",
     "from shapely import from_wkt\n",
+    "from shapely.geometry import Point, shape\n",
     "from calendar import SATURDAY\n",
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS,\n",
@@ -26,7 +26,6 @@
    "outputs": [],
    "source": [
     "train_file_in = \"../data/raw/train_stations.geojson\"\n",
-    "bus_routes_file_in = \"../data/raw/bus_routes.geojson\"\n",
     "bus_stops_file_in = \"../data/raw/bus_stops.geojson\"\n",
     "bike_stations_file_in = \"../data/interim/bike_stations_gbfs.geoparquet\"\n",
     "tract_file_in = \"../data/raw/tracts.geojson\"\n",
@@ -36,11 +35,11 @@
     "train_rides_in = \"../data/raw/train_rides.csv\"\n",
     "bus_rides_in = \"../data/raw/bus_rides.csv\"\n",
     "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
-    "uber_rides_in = \"../data/raw/uber_tract_rides.parquet\"\n",
+    "uber_tract_rides_in = \"../data/raw/uber_tract_rides.parquet\"\n",
+    "uber_comm_rides_in = \"../data/raw/uber_comm_rides.parquet\"\n",
     "\n",
     "train_stations_out = \"../data/interim/train_stations.geojson\"\n",
     "train_lines_out = \"../data/interim/train_lines.csv\"\n",
-    "bus_routes_file_out = \"../data/interim/bus_routes.geojson\"\n",
     "bus_stops_file_out = \"../data/interim/bus_stops.geojson\"\n",
     "bike_stations_file_out = \"../data/interim/bike_stations_gbfs_v2.geojson\"\n",
     "tract_file_out = \"../data/interim/tracts.geoparquet\"\n",
@@ -75,7 +74,6 @@
    "outputs": [],
    "source": [
     "train_stations = gpd.read_file(train_file_in)\n",
-    "bus_routes = gpd.read_file(bus_routes_file_in)\n",
     "bus_stops = gpd.read_file(bus_stops_file_in)\n",
     "tract_points = gpd.read_file(tract_file_in)\n",
     "comm_points = gpd.read_file(comm_file_in)\n",
@@ -92,7 +90,20 @@
     "train_rides = pd.read_csv(train_rides_in)\n",
     "bus_rides = pd.read_csv(bus_rides_in)\n",
     "bike_rides = gpd.read_parquet(bike_rides_in)\n",
-    "uber_rides = pd.read_parquet(uber_rides_in)"
+    "uber_tract_rides = pd.read_parquet(uber_tract_rides_in)\n",
+    "uber_comm_rides = pd.read_parquet(uber_comm_rides_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber_rides = pd.concat([uber_tract_rides.rename(columns={'tract':'id'}), \n",
+    "                        uber_comm_rides.rename(columns={'comm':'id'})],\n",
+    "                        axis=0, keys=['tract','comm'], names=['unit','index']) \\\n",
+    "                .reset_index('unit').reset_index(drop=True)"
    ]
   },
   {
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,20 +180,7 @@
     "oh_xy = Point(*oh_xy) # lng/lat\n",
     "oh_xy = gpd.GeoSeries([oh_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0]\n",
     "oh_tract = tract_points.set_index('geoid10').geometry.to_crs(LOCAL_CRS).contains(oh_xy)\n",
-    "oh_comm = comm_points.set_index('area_num_1').geometry.to_crs(LOCAL_CRS).contains(oh_xy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdw_xy = dms_to_decimal(*MIDWAY_CENTROID[1]), dms_to_decimal(*MIDWAY_CENTROID[0])\n",
-    "mdw_xy = Point(*mdw_xy) # lng/lat\n",
-    "mdw_xy = gpd.GeoSeries([mdw_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0]\n",
-    "mdw_tract = tract_points.set_index('geoid10').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)\n",
-    "mdw_comm = comm_points.set_index('area_num_1').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)"
+    "oh_comm = comm_points.set_index('comm_area').geometry.to_crs(LOCAL_CRS).contains(oh_xy)"
    ]
   },
   {
@@ -191,8 +189,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mdw_xy = dms_to_decimal(*MIDWAY_CENTROID[1]), dms_to_decimal(*MIDWAY_CENTROID[0])\n",
+    "mdw_xy = Point(*mdw_xy) # lng/lat\n",
+    "mdw_xy = gpd.GeoSeries([mdw_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0]\n",
+    "mdw_tract = tract_points.set_index('geoid10').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)\n",
+    "mdw_comm = comm_points.set_index('comm_area').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tract_points['airport'] = (tract_points['geoid10'].map(oh_tract) | tract_points['geoid10'].map(mdw_tract)).astype(float)\n",
-    "comm_points['airport'] = (comm_points['area_num_1'].map(oh_comm) | comm_points['area_num_1'].map(mdw_comm)).astype(float)"
+    "comm_points['airport'] = (comm_points['comm_area'].map(oh_comm) | comm_points['comm_area'].map(mdw_comm)).astype(float)"
    ]
   },
   {
@@ -211,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Station Tracts"
+    "## Tract Membership"
    ]
   },
   {
@@ -322,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,17 +345,17 @@
     "    gdf_proj = gdf.to_crs(LOCAL_CRS)\n",
     "    comm_proj = comm_points.to_crs(LOCAL_CRS)\n",
     "    coded_tracts = gdf_proj[['geometry']].sjoin(tracts_proj[['geoid10','geometry']], how='left', predicate='within')\n",
-    "    coded_comms = gdf_proj[['geometry']].sjoin(comm_proj[['area_num_1','geometry']], how='left', predicate='within')\n",
+    "    coded_comms = gdf_proj[['geometry']].sjoin(comm_proj[['comm_area','geometry']], how='left', predicate='within')\n",
     "    gdf = pd.concat([gdf, \n",
     "                    coded_tracts['geoid10'].rename('tract'), \n",
-    "                    coded_comms['area_num_1'].rename('comm_area')],\n",
+    "                    coded_comms['comm_area'].rename('comm_area')],\n",
     "                    axis=1)\n",
     "    return gdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,19 +407,19 @@
     "    comm_proj = comm_points.to_crs(LOCAL_CRS)\n",
     "    opts = dict(how='left', distance_col='dist', max_distance=meter_to_foot(TOLERANCE))\n",
     "    coded_tracts = gdf_proj[['geometry']].sjoin_nearest(tracts_proj[['geoid10','geometry']], **opts)\n",
-    "    coded_comms = gdf_proj[['geometry']].sjoin_nearest(comm_proj[['area_num_1','geometry']], **opts)\n",
+    "    coded_comms = gdf_proj[['geometry']].sjoin_nearest(comm_proj[['comm_area','geometry']], **opts)\n",
     "    assert all(coded_tracts.dist <= TOLERANCE)\n",
     "    assert all(coded_comms.dist <= TOLERANCE)\n",
     "    gdf = pd.concat([gdf, \n",
     "                    coded_tracts['geoid10'].rename('tract'), \n",
-    "                    coded_comms['area_num_1'].rename('comm_area')],\n",
+    "                    coded_comms['comm_area']],\n",
     "                    axis=1)\n",
     "    return gdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,23 +444,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tract Centroids"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Just converting this to geom dtype."
+    "## Transit access by tract"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_points['centroid'] = gpd.GeoSeries(tract_points['centroid'].apply(from_wkt), crs=tract_points.crs)"
+    "uber_tracts = tract_points[tract_points.geoid10.isin(uber_rides[uber_rides.unit=='tract']['id'])]\n",
+    "uber_tracts = uber_tracts.rename(columns={'geoid10':'id'})\n",
+    "uber_comms = comm_points[comm_points.comm_area.isin(uber_rides[uber_rides.unit=='comm']['id'])]\n",
+    "uber_comms = uber_comms.rename(columns={'comm_area':'id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def access_stats(area_df, transit_df, transit_name, area_id, transit_id):\n",
+    "    area_centroids = (area_df\n",
+    "                      .assign(centroid = area_df.geometry.to_crs(LOCAL_CRS).centroid)\n",
+    "                      .set_geometry('centroid')\n",
+    "                      .drop(columns=['geometry'])\n",
+    "                      .filter([area_id,'centroid']))\n",
+    "   \n",
+    "    # Note sjoin_nearest is m:m if points are equidistant ==> we further consolidate\n",
+    "    access = area_centroids.sjoin_nearest(transit_df[['geometry']].to_crs(LOCAL_CRS), \n",
+    "                                           how='left', \n",
+    "                                           distance_col=f'{transit_name}_distance') \\\n",
+    "                        .groupby(area_id,as_index=False)[f'{transit_name}_distance'].min()\n",
+    "\n",
+    "    contained = area_df.merge(transit_df, left_on=area_id, right_on=transit_id,\n",
+    "                               how='left', validate=\"1:m\") \\\n",
+    "                        .groupby(area_id,as_index=False).size() \\\n",
+    "                        .rename(columns={'size':f'{transit_name}_contained'})\n",
+    "    \n",
+    "    area_df = area_df.merge(access).merge(contained)\n",
+    "    return area_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tract_points = tract_points.pipe(access_stats, train_stations[['tract','geometry']], 'train', 'geoid10', 'tract')\n",
+    "tract_points = tract_points.pipe(access_stats, bike_stations[['tract','geometry']], 'bike', 'geoid10', 'tract')\n",
+    "# tract_points = tract_points.pipe(access_stats, bus_stops[['tract','geometry']], 'bus', 'geoid10', 'tract')\n",
+    "tract_points = tract_points.pipe(access_stats, uber_tracts[['id','geometry']], 'uber', 'geoid10', 'id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comm_points = comm_points.pipe(access_stats, train_stations[['comm_area','geometry']], 'train', 'comm_area', 'comm_area')\n",
+    "comm_points = comm_points.pipe(access_stats, bike_stations[['comm_area','geometry']], 'bike', 'comm_area', 'comm_area')\n",
+    "# comm_points = comm_points.pipe(access_stats, bus_stops[['comm_area','geometry']], 'bus', 'comm_area', 'comm_area')\n",
+    "comm_points = comm_points.pipe(access_stats, uber_comms[['id','geometry']], 'uber', 'comm_area', 'id')"
    ]
   },
   {
@@ -468,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,28 +577,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations.to_file(train_stations_out, index=False)\n",
-    "bus_routes.to_file(bus_routes_file_out, index=False)\n",
     "bus_stops.to_file(bus_stops_file_out, index=False)\n",
+    "bike_stations.to_file(bike_stations_file_out, index=False)\n",
     "tract_points.to_parquet(tract_file_out, index=False)\n",
-    "comm_points.to_file(comm_file_out, index=False)\n",
-    "bike_stations.to_file(bike_stations_file_out, index=False)"
+    "comm_points.to_file(comm_file_out, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_rides.to_csv(train_rides_out, index=False)\n",
     "bus_rides.to_csv(bus_rides_out, index=False)\n",
     "bike_rides.to_parquet(bike_rides_out, index=False)\n",
-    "uber_rides.to_parquet(uber_rides_out, index=False)\n"
+    "uber_rides.to_parquet(uber_rides_out, index=False)"
    ]
   }
  ],
