--- a/pipeline/7-establish-panel.ipynb
+++ b/pipeline/7-establish-panel.ipynb
@@ -242,16 +242,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_agg(df):\n",
-    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long']}\n",
-    "    time_aggs = {'rides':'sum','DNC':'max', 'is_weekend': 'max'}  \n",
+    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long',\n",
+    "                                      'train_distance', 'train_contained', \n",
+    "                                       'bike_distance', 'bike_contained',\n",
+    "                                        'uber_distance', 'uber_contained']}\n",
+    "    time_aggs = {'rides':'sum','DNC':'max', 'is_weekend': 'max', 'dotw': 'max'}  \n",
+    "    aggs = {k:v for k,v in (unit_aggs | time_aggs).items() if k in df.columns}\n",
     "    # weekend is constant for weekly model but we just won't include it in the model spec\n",
-    "    df_weekly = df.groupby(['year-week','id','transit'], as_index=False).agg(unit_aggs | time_aggs)\n",
-    "    df_daily = df.groupby(['date','id','transit'], as_index=False).agg(unit_aggs | time_aggs)\n",
+    "    df_weekly = df.groupby(['year-week','id','transit'], as_index=False).agg(aggs)\n",
+    "    df_daily = df.groupby(['date','id','transit'], as_index=False).agg(aggs)\n",
     "    return df_weekly, df_daily\n",
     "\n",
     "point_panel_weekly, point_panel_daily = model_agg(point_panel)\n",
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +416,7 @@
        "is_detectable        True        True       1.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +543,7 @@
        "is_detectable           True         True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
