run tract level did

--- a/notebooks/exploratory/2024/11/panel-models.ipynb
+++ b/notebooks/exploratory/2024/11/panel-models.ipynb
@@ -13,7 +13,7 @@
     "from statsmodels.regression.linear_model import RegressionResults\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "\n",
-    "from stats.reg import coefplot, prettify_coefs, main_effects, joint_effect, cond_effect, catvar"
+    "from stats.reg import coefplot, prettify_coefs, compute_vif, main_effects, joint_effect, cond_effect, catvar"
    ]
   },
   {
@@ -548,20 +548,6 @@
     "    RegressionResults.summary = summary\n",
     "\n",
     "monkey_patched = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_vif(model):\n",
-    "    \"\"\"Helper function to find multi-colinear regressors.\"\"\"\n",
-    "    vif = [variance_inflation_factor(model.model.exog, i) for i in range(model.model.exog.shape[1])]\n",
-    "    vif = pd.Series(dict(zip(model.model.data.cov_names, vif))).reset_index()\n",
-    "    vif.columns = [\"coef\", \"vif\"]\n",
-    "    return vif[vif['vif'] >= 5]"
    ]
   },
   {
