--- a/notebooks/replication/dnc-effect/baseline.ipynb
+++ b/notebooks/replication/dnc-effect/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comm_panel = comm_panel[comm_panel.date < \"2024-08-19\"]"
+    "comm_panel = comm_panel[comm_panel.date < \"2024-08-19\"]\n",
+    "tract_panel = tract_panel[tract_panel.date < \"2024-08-19\"]\n",
+    "line_panel = line_panel[line_panel.date < \"2024-08-19\"]"
    ]
   },
   {
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,10 +78,10 @@
     "             .drop(columns=['date','DNC','is_weekend','dotw','rides'])\n",
     "             .drop_duplicates()\n",
     "             .groupby(['transit'])\n",
-    "             .agg({\"id\":\"nunique\", \"UCMP\":\"sum\", \"airport\":\"sum\", \n",
+    "             .agg({\"id\":\"nunique\", \"UCMP\":\"sum\",\n",
     "                   'lat':[\"min\",\"max\",\"mean\"],\n",
     "                   'long':[\"min\",\"max\",\"mean\"]})).T\n",
-    "    spacelike.index=['n units.', 'serves DNC', 'serves airport', \n",
+    "    spacelike.index=['n units.', 'serves DNC',\n",
     "                    'lat: min','lat: max','lat: mean',\n",
     "                    'lon: min','lon: max','lon: mean']\n",
     "    return spacelike.round(2)"
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +106,6 @@
            [
             "n units.",
             "serves DNC",
-            "serves airport",
             "lat: min",
             "lat: max",
             "lat: mean",
@@ -113,37 +114,34 @@
             "lon: mean"
            ],
            [
-            77,
-            8,
-            2,
-            -2.04,
-            1.71,
+            637,
+            37,
+            -2.2,
+            1.87,
             -0.12,
-            -3.28,
-            2.15,
-            0.03
+            -1.98,
+            2.16,
+            0.2
            ],
            [
-            42,
-            7,
-            2,
-            -1.54,
-            1.71,
-            0.22,
-            -3.28,
-            1.24,
-            -0.06
+            110,
+            14,
+            -1.45,
+            1.94,
+            0.24,
+            -2.31,
+            1.21,
+            0.13
            ],
            [
-            77,
-            8,
-            2,
-            -2.04,
-            1.71,
+            1242,
+            40,
+            -3.92,
+            2.69,
             -0.12,
-            -3.28,
-            2.15,
-            0.03
+            -6.62,
+            2.16,
+            -0.47
            ]
           ]
          },
@@ -985,7 +983,7 @@
     }
    ],
    "source": [
-    "plot_data = spacelike_stats(comm_panel)\n",
+    "plot_data = spacelike_stats(tract_panel)\n",
     "\n",
     "fig = go.Figure(data=[go.Table(\n",
     "    header=dict(values=['transit'] + list(plot_data.columns),\n",
@@ -1000,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1034,6 @@
            [
             "n units.",
             "serves DNC",
-            "serves airport",
             "lat: min",
             "lat: max",
             "lat: mean",
@@ -1049,49 +1046,46 @@
             "rides: mean"
            ],
            [
-            77,
-            8,
-            2,
-            -2.04,
-            1.71,
+            637,
+            37,
+            -2.2,
+            1.87,
             -0.12,
-            -3.28,
-            2.15,
-            0.03,
+            -1.98,
+            2.16,
+            0.2,
             55,
             1,
-            9079,
-            527.19
+            2197,
+            83.06
            ],
            [
-            42,
-            7,
-            2,
-            -1.54,
-            1.71,
-            0.22,
-            -3.28,
-            1.24,
-            -0.06,
+            110,
+            14,
+            -1.45,
+            1.94,
+            0.24,
+            -2.31,
+            1.21,
+            0.13,
             55,
-            123,
-            117683,
-            7648.06
+            0,
+            55294,
+            2941.25
            ],
            [
-            77,
-            8,
-            2,
-            -2.04,
-            1.71,
+            1242,
+            40,
+            -3.92,
+            2.69,
             -0.12,
-            -3.28,
-            2.15,
-            0.03,
-            54,
-            219,
-            87772,
-            5476.12
+            -6.62,
+            2.16,
+            -0.47,
+            55,
+            1,
+            26193,
+            234.58
            ]
           ]
          },
@@ -1933,7 +1927,7 @@
     }
    ],
    "source": [
-    "plot_data = pd.concat([spacelike_stats(comm_panel), timelike_stats(comm_panel)])\n",
+    "plot_data = pd.concat([spacelike_stats(tract_panel), timelike_stats(tract_panel)])\n",
     "plot_data\n",
     "fig = go.Figure(data=[go.Table(\n",
     "    header=dict(values=['transit'] + list(plot_data.columns),\n",
@@ -1956,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,13 +2008,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                               0               1               P-Value\n",
+      "----------------------  -----  --------------  --------------  ---------\n",
+      "tracts                         1898            91\n",
+      "tract-days                     113663          6950\n",
+      "daily rides, mean (SD)         358.3 (1548.9)  756.3 (1699.2)  <0.001\n",
+      "transit, n (%)          bike   600 (31.6)      37 (40.7)       <0.001\n",
+      "                        train  96 (5.1)        14 (15.4)\n",
+      "                        uber   1202 (63.3)     40 (44.0)\n",
+      "lat, mean (SD)                 -0.1 (1.2)      -0.1 (0.2)      0.208\n",
+      "long, mean (SD)                -0.3 (1.4)      0.5 (0.3)       <0.001\n",
       "                               0                1                P-Value\n",
       "----------------------  -----  ---------------  ---------------  ---------\n",
       "community areas                173              23\n",
@@ -2034,8 +2038,8 @@
       "                               0                  1                    P-Value\n",
       "----------------------  -----  -----------------  -------------------  ---------\n",
       "routes                         105                28\n",
-      "route-days                     8734               2309\n",
-      "daily rides, mean (SD)         11620.1 (50371.6)  262183.2 (791915.5)  <0.001\n",
+      "route-days                     7447               1971\n",
+      "daily rides, mean (SD)         11642.7 (50566.3)  262080.4 (792357.0)  <0.001\n",
       "transit, n (%)          bus    101 (96.2)         24 (85.7)            0.060\n",
       "                        train  4 (3.8)            4 (14.3)\n",
       "lat, mean (SD)                 -0.3 (1.3)         -0.3 (0.4)           0.887\n",
@@ -2044,24 +2048,29 @@
     }
    ],
    "source": [
+    "tract_balance = balance_table(tract_panel, 'tracts', 'tract')\n",
     "comm_balance = balance_table(comm_panel, 'community areas', 'CA')\n",
     "line_balance = balance_table(line_panel, 'routes', 'route')\n",
+    "print(tract_balance.tabulate(tablefmt='simple'))\n",
     "print(comm_balance.tabulate(tablefmt='simple'))\n",
     "print(line_balance.tabulate(tablefmt='simple'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(\"../../../reports/replication/tract-balance.md\",\"w\") as f:\n",
+    "    f.write(tract_balance.tabulate(headers=['Not Near DNC', 'Near DNC', 'P-Value'],tablefmt=\"github\"))\n",
     "with open(\"../../../reports/replication/comm-balance.md\",\"w\") as f:\n",
     "    f.write(comm_balance.tabulate(headers=['Not Near DNC', 'Near DNC', 'P-Value'],tablefmt=\"github\"))\n",
     "with open(\"../../../reports/replication/line-balance.md\",\"w\") as f:\n",
     "    f.write(line_balance.tabulate(headers=['Not Near DNC', 'Near DNC', 'P-Value'],tablefmt=\"github\"))\n",
-    "!cp ../../../reports/replication/comm-balance.md ../../../../eric-mc2-cv/static/uploads\n",
-    "!cp ../../../reports/replication/line-balance.md ../../../../eric-mc2-cv/static/uploads"
+    "!cp ../../../reports/replication/tract-balance.md ../../../../eric-mc2-cv/static/uploads/\n",
+    "!cp ../../../reports/replication/comm-balance.md ../../../../eric-mc2-cv/static/uploads/\n",
+    "!cp ../../../reports/replication/line-balance.md ../../../../eric-mc2-cv/static/uploads/"
    ]
   },
   {
