--- a/notebooks/replication/dnc-effect/mde.ipynb
+++ b/notebooks/replication/dnc-effect/mde.ipynb
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comm_panel_in = os.path.join(DATA_FOLDER, \"final\", \"comm_panel.parquet\")"
+    "comm_panel_in = os.path.join(DATA_FOLDER, \"final\", \"comm_panel.parquet\")\n",
+    "tract_panel_in = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
    ]
   },
   {
@@ -34,7 +35,9 @@
    "outputs": [],
    "source": [
     "comm_panel = pd.read_parquet(comm_panel_in)\n",
-    "comm_panel = comm_panel.query('~is_weekend')"
+    "comm_panel = comm_panel.query('~is_weekend')\n",
+    "tract_panel = pd.read_parquet(tract_panel_in)\n",
+    "tract_panel = tract_panel.query('~is_weekend')"
    ]
   },
   {
@@ -43,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trt_panel = comm_panel.query(\"(DNC==1)\")"
+    "trt_panel = tract_panel.query(\"(DNC==1)\")"
    ]
   },
   {
@@ -100,63 +103,63 @@
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0</th>\n",
        "      <th>bike</th>\n",
-       "      <td>424.8 (1271.9)</td>\n",
-       "      <td>223.6</td>\n",
-       "      <td>1.1</td>\n",
+       "      <td>72.8 (181.6)</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train</th>\n",
-       "      <td>6732.4 (11439.2)</td>\n",
-       "      <td>2708.5</td>\n",
-       "      <td>7.6</td>\n",
+       "      <td>2651.2 (4084.7)</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>uber</th>\n",
-       "      <td>4525.4 (8956.9)</td>\n",
-       "      <td>1521.5</td>\n",
-       "      <td>8.3</td>\n",
+       "      <td>187.5 (685.8)</td>\n",
+       "      <td>31.1</td>\n",
+       "      <td>2.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">1</th>\n",
        "      <th>bike</th>\n",
-       "      <td>1289.3 (1609.8)</td>\n",
-       "      <td>797.3</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>177.0 (237.1)</td>\n",
+       "      <td>55.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train</th>\n",
-       "      <td>7417.2 (5733.2)</td>\n",
-       "      <td>3035.4</td>\n",
-       "      <td>1.7</td>\n",
+       "      <td>2492.9 (2102.1)</td>\n",
+       "      <td>787.0</td>\n",
+       "      <td>0.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>uber</th>\n",
-       "      <td>10842.0 (13352.4)</td>\n",
-       "      <td>6612.8</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>925.3 (1981.5)</td>\n",
+       "      <td>438.9</td>\n",
+       "      <td>1.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Daily Rides                 Mean (SD)  Minimum Detectable Effect  \\\n",
-       "Serves DNC Transit                                                 \n",
-       "0          bike        424.8 (1271.9)                      223.6   \n",
-       "           train     6732.4 (11439.2)                     2708.5   \n",
-       "           uber       4525.4 (8956.9)                     1521.5   \n",
-       "1          bike       1289.3 (1609.8)                      797.3   \n",
-       "           train      7417.2 (5733.2)                     3035.4   \n",
-       "           uber     10842.0 (13352.4)                     6612.8   \n",
+       "Daily Rides               Mean (SD)  Minimum Detectable Effect  \\\n",
+       "Serves DNC Transit                                               \n",
+       "0          bike        72.8 (181.6)                       12.4   \n",
+       "           train    2651.2 (4084.7)                      584.0   \n",
+       "           uber       187.5 (685.8)                       31.1   \n",
+       "1          bike       177.0 (237.1)                       55.4   \n",
+       "           train    2492.9 (2102.1)                      787.0   \n",
+       "           uber      925.3 (1981.5)                      438.9   \n",
        "\n",
        "Daily Rides         MDE Per Attendee  \n",
        "Serves DNC Transit                    \n",
-       "0          bike                  1.1  \n",
-       "           train                 7.6  \n",
-       "           uber                  8.3  \n",
-       "1          bike                  0.5  \n",
-       "           train                 1.7  \n",
-       "           uber                  4.2  "
+       "0          bike                  0.4  \n",
+       "           train                 4.5  \n",
+       "           uber                  2.4  \n",
+       "1          bike                  0.2  \n",
+       "           train                 0.9  \n",
+       "           uber                  1.4  "
       ]
      },
      "execution_count": 6,
@@ -184,14 +187,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|   Serves DNC | Transit   | Mean (SD)         |   Minimum Detectable Effect |   MDE Per Attendee |\n",
-      "|--------------|-----------|-------------------|-----------------------------|--------------------|\n",
-      "|            0 | bike      | 424.8 (1271.9)    |                       223.6 |                1.1 |\n",
-      "|            0 | train     | 6732.4 (11439.2)  |                      2708.5 |                7.6 |\n",
-      "|            0 | uber      | 4525.4 (8956.9)   |                      1521.5 |                8.3 |\n",
-      "|            1 | bike      | 1289.3 (1609.8)   |                       797.3 |                0.5 |\n",
-      "|            1 | train     | 7417.2 (5733.2)   |                      3035.4 |                1.7 |\n",
-      "|            1 | uber      | 10842.0 (13352.4) |                      6612.8 |                4.2 |\n"
+      "|   Serves DNC | Transit   | Mean (SD)       |   Minimum Detectable Effect |   MDE Per Attendee |\n",
+      "|--------------|-----------|-----------------|-----------------------------|--------------------|\n",
+      "|            0 | bike      | 72.8 (181.6)    |                        12.4 |                0.4 |\n",
+      "|            0 | train     | 2651.2 (4084.7) |                       584   |                4.5 |\n",
+      "|            0 | uber      | 187.5 (685.8)   |                        31.1 |                2.4 |\n",
+      "|            1 | bike      | 177.0 (237.1)   |                        55.4 |                0.2 |\n",
+      "|            1 | train     | 2492.9 (2102.1) |                       787   |                0.9 |\n",
+      "|            1 | uber      | 925.3 (1981.5)  |                       438.9 |                1.4 |\n"
      ]
     }
    ],
@@ -203,7 +206,7 @@
     "                   tablefmt='github')\n",
     "    f.write(tbl)\n",
     "    print(tbl)\n",
-    "!cp ../../../reports/replication/mde.md ../../../../eric-mc2-cv/static/uploads/mde.md"
+    "!cp ../../../reports/replication/mde.md ../../../../eric-mc2-cv/static/uploads/"
    ]
   }
  ],
