drop dupicate raw row

--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -233,6 +233,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 1 full duplicates\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dropping {} full duplicates\".format(bus_stops.duplicated().sum()))\n",
+    "bus_stops = bus_stops[~bus_stops.duplicated()]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
